fixed contact page and spacings

--- a/sites/all/themes/wander/src/sass/partials/_forms.scss
+++ b/sites/all/themes/wander/src/sass/partials/_forms.scss
@@ -19,16 +19,36 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="password"],
-input[type="number"] {
-  border-bottom: solid 1px $mustard;
-  background-color: $wanderWhite;
+input[type="number"]{
+  border-bottom: solid 3px $mustard;
   color: $wanderBlack;
   padding: 1rem 1.5rem;
   width: 100%;
+  background-color: #fff;
   &::placeholder {
     opacity: 1;
   }
 }
+
+textarea {
+  padding: 1rem 1.5rem;
+  height: 70vh;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1em;
+  border: none;
+  border-bottom: solid 3px $mustard;
+  color: $wanderBlack;
+  background-color: #fff;
+  &::placeholder {
+    opacity: 1;
+  }
+  &:focus {
+    outline: none;
+    border-bottom: 5px solid $accent;
+  }
+}
+
+
 
 .fl-wrap {
   position: relative;
@@ -54,7 +74,10 @@ input[type="email"]:focus,
 input[type="password"]:focus,
 input[type="number"]:focus {
   outline: none;
-  border-bottom: 3px solid $accent;
+  border-bottom: 5px solid $accent;
+  &::placeholder {
+    opacity: 1;
+  }
 }
 
 /* Date input */
@@ -176,4 +199,29 @@ input[type="radio"] {
     background-image: url('../images/icon--radio-checked.svg')
   }
 
+}
+
+@include media ('>medium') {
+  .node-webform {
+
+    .webform-client-form {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      .form-item {
+        width: 47.5%;
+      }
+
+      .webform-component-textarea {
+        width: 100%;
+
+        textarea {
+          height: 30vh;
+        }
+      }
+
+    }
+
+  }
 }
