--- a/sites/all/themes/wander/src/sass/partials/_typography.scss
+++ b/sites/all/themes/wander/src/sass/partials/_typography.scss
@@ -112,6 +112,9 @@ a {
   &:hover {
     text-decoration: underline;
   }
+  &:focus {
+    outline: 0;
+  }
 }
 
 .intro {
