--- a/sites/all/themes/wander/src/sass/partials/layouts/_contact.scss
+++ b/sites/all/themes/wander/src/sass/partials/layouts/_contact.scss
@@ -1,3 +1,13 @@
+.node-type-webform {
+  //#carousel {
+  //  display: none;
+  //}
+  //.carousel {
+  //  display: block;
+  //}
+}
+
 .node.node-webform footer {
   display: none;
 }
+
