--- a/sites/all/themes/wander/src/sass/partials/layouts/_front.scss
+++ b/sites/all/themes/wander/src/sass/partials/layouts/_front.scss
@@ -7,10 +7,7 @@
   .content {
     width: 90%;
     max-width: 900px;
-
-    .field .button{
-      margin: 50px auto 100px;
-    }
+    margin: 50px auto 100px;
   }
 
   p:first-child {
@@ -28,11 +25,7 @@
   .front {
 
     .content {
-
-
-      .field .button {
-        margin: 50px 0 150px;
-      }
+      margin: 100px auto 150px;
     }
     
     p {
